--- a/style.css
+++ b/style.css
@@ -161,7 +161,7 @@
 /**/
 /*Homepage*/
 #Homepage {
-  background-image:url("Achtergrond-home-screen.jpg");
+  background-image:url("Red-and-Black.jpg");
   color:rgb(255, 255, 255);
   margin: 0;
   padding: 0;
