--- a/style.css
+++ b/style.css
@@ -1,244 +1,309 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:700);
+
 #cssmenu {
-   width: auto;
-   position: relative;
-   top: 0;
+  width: auto;
+  position: relative;
+  top: 0;
 }
+
 #cssmenu ul {
-   list-style: none;
-   margin: 0;
-   padding: 0;
-   line-height: 1;
-   display: block;
-   zoom: 1;
-   margin-bottom: 25px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  line-height: 1;
+  display: block;
+  zoom: 1;
+  margin-bottom: 25px;
 }
+
 #cssmenu ul:after {
-   content:' ';
-   display: block;
-   font-size: 0;
-   height: 0;
-   clear: both;
-   visibility: hidden;
+  content: ' ';
+  display: block;
+  font-size: 0;
+  height: 0;
+  clear: both;
+  visibility: hidden;
 }
+
 #cssmenu ul li {
-   float: left;
-   display: block;
-   padding: 0;
+  float: left;
+  display: block;
+  padding: 0;
 }
+
 #cssmenu ul li a {
-   color: #ffffff;
-   text-decoration: none;
-   display: block;
-   padding: 18px 24px;
-   font-family:'Open Sans', sans-serif;
-   font-weight: 700;
-   font-size: 14px;
-   position: relative;
-   -webkit-transition: color .25s;
-   -moz-transition: color .25s;
-   -ms-transition: color .25s;
-   -o-transition: color .25s;
-   transition: color .25s;
+  color: #ffffff;
+  text-decoration: none;
+  display: block;
+  padding: 18px 24px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  position: relative;
+  -webkit-transition: color .25s;
+  -moz-transition: color .25s;
+  -ms-transition: color .25s;
+  -o-transition: color .25s;
+  transition: color .25s;
 }
+
 #cssmenu ul li a:hover {
-   color: #880808;
+  color: #880808;
 }
+
 #cssmenu ul li a:hover:before {
-   width: 100%;
+  width: 100%;
 }
+
 #cssmenu ul li a:before {
-   content:'';
-   display: block;
-   position: absolute;
-   left: 0;
-   bottom: 0;
-   height: 3px;
-   width: 0;
-   background: #880808;
-   -webkit-transition: width .25s;
-   -moz-transition: width .25s;
-   -ms-transition: width .25s;
-   -o-transition: width .25s;
-   transition: width 1s;
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 3px;
+  width: 0;
+  background: #880808;
+  -webkit-transition: width .25s;
+  -moz-transition: width .25s;
+  -ms-transition: width .25s;
+  -o-transition: width .25s;
+  transition: width 1s;
 }
-#cssmenu ul li.last > a:after, #cssmenu ul li:last-child > a:after {
-   display: none;
+
+#cssmenu ul li.last>a:after,
+#cssmenu ul li:last-child>a:after {
+  display: none;
 }
+
 #cssmenu ul li.active a {
-   color: #880808;
+  color: #880808;
 }
+
 #cssmenu ul li.active a:before {
-   width: 100%;
+  width: 100%;
 }
+
 .socialtop {
-    float: right;
-    margin-top: 1%;
-    margin-left: 1%;
-    margin-right: 1%;
+  float: right;
 }
-.top-social a{
-    padding:10px;
-    color: #FFF;
+
+.top-social a {
+  padding: 10px;
+  color: #FFF;
 }
-.top-social .facebook:hover{
-    color: #1877f2;
+
+.top-social .facebook:hover {
+  color: #1877f2;
 }
-.top-social .twitter:hover{
-    color: #1d9bf0;
+
+.top-social .twitter:hover {
+  color: #1d9bf0;
 }
-.top-social .instagram:hover{
-    background: #d6249f;
-    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+
+.top-social .instagram:hover {
+  background: #d6249f;
+  background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-.top-social .youtube:hover{
-    color: #f00;
+
+.top-social .youtube:hover {
+  color: #f00;
 }
-.top-social .github:hover{
-    color: rgb(106, 106, 106);
+
+.top-social .github:hover {
+  color: rgb(106, 106, 106);
 }
-.top-social .linkedin:hover{
+
+.top-social .linkedin:hover {
   color: #0a66c2;
 }
+
 /**/
 .dropdown {
-    display: inline-block;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 700;
-    font-size: 14px;
-    background: #880808;
-    color: #fff;
-    cursor: pointer;
-    height: 50px;
-    line-height: 50px;
-    position: relative;
-    width: 150px;
-    text-align: center;
-    text-decoration: none;
-    z-index: 1;
-    transform: perspective(1000px);
-  }
-  .dropdown-menu {
-    background-color: rgb(0, 0, 0);
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    left: 0;
-    opacity: 0;
-    text-align: center;
-    top: 0;
-    visibility: hidden;
-    z-index: 1;
-  }
-  .dropdown-menu li:first-child {
-    cursor: default;
-  }
-  .dropdown-menu a {
-    width: 100%;
-    text-decoration: none;
-    -webkit-transition: all 1s;
-    transition: all 1s;
-    padding-left: 0px;
-    padding-right: 0px;
-  }
- .dropdown .dropdown-menu li a{
-    padding-left: 0px!important;
-    padding-right: 0px!important;
- }
-  .dropdown:hover .dropdown-menu {
-    background: #000000;
-    opacity: 1;
-    visibility: visible;
-    top: 100%;
-    width: 100%;
-    -webkit-transition: all .5s, background, 2s .5s linear;
-    transition: all .5s, background 2s .5s linear;
-  }
+  display: inline-block;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  background: #880808;
+  color: #fff;
+  cursor: pointer;
+  height: 50px;
+  line-height: 50px;
+  position: relative;
+  width: 150px;
+  text-align: center;
+  text-decoration: none;
+  z-index: 1;
+  transform: perspective(1000px);
+}
+
+.dropdown-menu {
+  background-color: rgb(0, 0, 0);
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  left: 0;
+  opacity: 0;
+  text-align: center;
+  top: 0;
+  visibility: hidden;
+  z-index: 1;
+}
+
+.dropdown-menu li:first-child {
+  cursor: default;
+}
+
+.dropdown-menu a {
+  width: 100%;
+  text-decoration: none;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.dropdown .dropdown-menu li a {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
+}
+
+.dropdown:hover .dropdown-menu {
+  background: #000000;
+  opacity: 1;
+  visibility: visible;
+  top: 100%;
+  width: 100%;
+  -webkit-transition: all .5s, background, 2s .5s linear;
+  transition: all .5s, background 2s .5s linear;
+}
 
 /**/
 /*Homepage*/
 #Homepage {
-  background-image:url("Red-and-Black.jpg");
-  color:rgb(255, 255, 255);
+  background-image: url("Red-and-Black.jpg");
+  color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
   background-color: #000;
 }
+
 .Homepage {
-    font-family: Sarabun, sans-serif;
-    color:#FFF;
-    text-align: center;
+  font-family: Sarabun, sans-serif;
+  color: #FFF;
+  text-align: center;
 }
 
 /**/
 /*Over-mij page*/
 #Over-mij {
-  background-image:url("Red-and-Black.jpg");
-  background-repeat: no-repeat;
-  background-size:cover; 
-  background-color: #000;
+  background-image: url("Red-and-Black.jpg");
+  color: rgb(255, 255, 255);
   margin: 0;
   padding: 0;
+  background-color: #000;
 }
+
 .Over-mij {
-    display: flex;
-    text-align: center;
-    font-family: Sarabun, sans-serif;
+  display: flex;
+  text-align: center;
+  font-family: Sarabun, sans-serif;
 }
+
 .Linker-blokje {
-    width: 50%;
-    padding-top: 3%;
+  width: 50%;
+  padding-top: 3%;
 }
+
 .rechter-blokje {
-    width: 50%;
-    padding-top: 0px;
-    padding-right:5%;
-    color: #FFF;
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  padding-right: 5%;
 }
-.Linker-blokje img{
+
+.Linker-blokje img {
   box-shadow: 0px 0px 200px #880808;
 }
+
 /* Brightness-zoom Container */
 .img-hover-zoom--brightness img {
   transition: transform 3s, filter 1s ease-in-out;
   transform-origin: center center;
   filter: brightness(50%);
 }
+
 /* The Transformation */
 .img-hover-zoom--brightness:hover img {
   filter: brightness(100%);
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 /**/
 /*Projecten page*/
 #Projecten {
-background-image:url("Red-and-Black.jpg");
-background-repeat: no-repeat;
-background-size:cover; 
-background-color: #000;
-margin: 0;
-padding: 0;
+  background-image: url("Red-and-Black.jpg");
+  background-color: #000;
+  margin: 0;
+  padding: 0;
+  background-repeat: no-repeat;
 }
+
 .Projecten {
   display: flex;
   text-align: center;
   font-family: Sarabun, sans-serif;
+  position: absolute;
+  top: 20%;
 }
 
 .left-col {
   width: 50%;
-  padding: 20px;
-  color: #FFF;
 }
 
-.right-col {
-  width: 50%;
-  padding: 20px;
-  color: #FFF;
+.left-col .titleimg {
+  background-color: #880808;
+  color: grey;
+  padding: 10px;
+  border-radius: 10px;
+  text-decoration: none;
+  font-size: 21px;
+  border: 1px solid;
+}
+
+.left-col .titleimg:hover {
+  background-color:#6e0404;
+}
+
+.left-col img {
+  max-width: 100%;
+  height: auto;
+  padding: 15px;
+  border-radius: 25px;
+}
+
+.block {
+  display: flex;
+  width: 220px;
+  margin: 0 auto;
+}
+
+.block h3 {
+  margin-bottom: 10px;
+}
+
+.block li {
+  padding-left: 10px;
+  padding-right: 10px;
+  color: grey;
+}
+
+.block li i {
+  margin-bottom: 25px;
+  font-size: 2.6em;
 }
 
 ul {
@@ -246,125 +311,337 @@ ul {
   padding: 0;
 }
 
-/**/ 
+/**/
 /*CV Layout*/
-#CV{
-    background-image:url("Red-and-Black.jpg");
-    background-repeat: no-repeat;
-    background-size:cover; 
-    background-color: #000;
-    font-family: Sarabun, sans-serif;
-    text-align: left;
-    margin: 0;
-    padding: 0;
+#CV {
+  background-image: url("Red-and-Black.jpg");
+  background-color: #000;
+  font-family: Sarabun, sans-serif;
+  text-align: left;
+  margin: 0;
+  padding: 0;
 }
-.cv-container {
-    border: 1px;
-    border-style: solid;
-    max-width: 625px;
-    margin: auto;
-    padding-top: 20px;
-    padding-left: 20px;
-    padding-right: 15px;
-    padding-bottom: 30px;
-    background-color: #ffffff;
-    box-shadow: 0px 0px 200px #880808;
-} 
-.cv-header h2 {
-    font-size: 28px;
-    font-weight: bold;
-    text-align: center;
-    margin-right: 10%;
-    margin-top: 50px;
-}
-.cv-body {
-    padding-top: 20px;
-}
-.cv-section {
-    padding-bottom: 5px;
-    margin-bottom: 10px;
-}
-.cv-section-header h3 {
-    font-size: 16px;
-    font-weight: bold;
-    text-align: left;
-    border-bottom: 1px solid #cccccc;
-    margin-bottom: 10px;
-}
-.cv-section-body {
-    padding-top: 10px;
-}
-.cv-item {
-    padding-top: 10px;
-}
-.cv-email {
-    padding-top: 10px;
-}
-.cv-item h4 {
-    margin: 0;
-    font-size: 14px;
-    font-weight: bold;
-}
-.cv-email h4 {
-    margin: 0;
-    font-size: 14px;
-    font-weight: bold;
-}
-.cv-item p {
-    margin: 0;
-    font-size: 12px;
-}
-.cv-email p {
-    margin: 0;
-    font-size: 12px;
-}
-.cv-section a {
-    color:#000;
-    text-decoration: none;
-}
-.knop-cv {
-    flex: 1;
-    background-color: #880808;
-    color: rgb(255, 255, 255)!important;
-    border: 1px solid;
-    padding: 0.5rem;
-    text-align: center;
-    text-decoration: none;
-    transition: all .75s ease-out;
-    float: right;
-    font-size: 12px;
-  }
 
-  .knop-cv:hover,
-  .knop-cv:focus {
-    background-color: #fff;
-    color: #000!important;
+.cv-container {
+  position: relative;
+  border: 1px;
+  border-style: solid;
+  max-width: 625px;
+  margin: auto;
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 15px;
+  padding-bottom: 25px;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 200px #880808;
+  top: 15px;
+}
+
+.cv-header h2 {
+  font-size: 28px;
+  font-weight: bold;
+  text-align: center;
+  margin-right: 10%;
+  margin-top: 50px;
+}
+
+.cv-body {
+  padding-top: 55px;
+}
+
+.cv-section {
+  padding-bottom: 5px;
+  margin-bottom: 10px;
+}
+
+.cv-section-header h3 {
+  font-size: 16px;
+  font-weight: bold;
+  text-align: left;
+  border-bottom: 1px solid #cccccc;
+  margin-bottom: 10px;
+}
+
+.cv-item {
+  padding-top: 10px;
+}
+
+.cv-email {
+  padding-top: 10px;
+}
+
+.cv-item h4 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.cv-email h4 {
+  margin: 0;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.cv-item p {
+  margin: 0;
+  font-size: 12px;
+}
+
+.cv-email p {
+  margin: 0;
+  font-size: 12px;
+}
+
+.cv-section a {
+  color: rgb(139 139 139);
+  text-decoration: none;
+}
+
+.knop-cv {
+  flex: 1;
+  background-color: #880808;
+  color: rgb(255, 255, 255) !important;
+  border: 1px solid;
+  padding: 0.5rem;
+  text-align: center;
+  text-decoration: none;
+  transition: all .75s ease-out;
+  float: right;
+  font-size: 12px;
+}
+
+.knop-cv:hover,
+.knop-cv:focus {
+  background-color: #fff;
+  color: #000 !important;
 }
 
 /**/
 /*Footer Homepage*/
 .main-footer-home {
-    position: absolute;
-    bottom: 0;
-    margin-left: 25px;
-}
-.main-footer-home p {
-    font-size: 16px;
-    font-family:UniversLTPro-65Bold;
-    text-align:left; 
-    color:#FFF;
-}
-/*Footer andere pagina's*/
-.main-footer-paginas {
-    position: absolute;
-    bottom: 0;
-    margin-left: 25px;
-}
-.main-footer-paginas p {
-    font-size: 16px;
-    font-family:UniversLTPro-65Bold;
-    text-align:left; 
-    color:rgb(255, 255, 255);
+  background-color: #000000;
+  color: #555;
+  padding: 10px;
+  text-align: left;
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: 50px;
+  /* set a fixed height or use min-height for dynamic content */
 }
 
-  
+* {
+  margin: 0;
+  padding: 0;
+  user-select: none;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.btn {
+  position: absolute;
+  top: 15px;
+  left: 45px;
+  height: 45px;
+  width: 45px;
+  text-align: center;
+  background: #1b1b1b;
+  border-radius: 3px;
+  cursor: pointer;
+  transition: left 0.4s ease;
+}
+
+.btn.click {
+  left: 260px;
+  z-index: 9999;
+}
+
+.btn span {
+  color: white;
+  font-size: 28px;
+  line-height: 45px;
+}
+
+.serv-btn {
+  color: rgb(167, 167, 167);
+}
+
+.btn.click span:before {
+  content: '\f00d';
+}
+
+.sidebar {
+  position: fixed;
+  width: 250px;
+  height: 100%;
+  left: -250px;
+  background: #1b1b1b;
+  transition: left 0.4s ease;
+  z-index: 99999999;
+}
+
+.sidebar.show {
+  left: 0px;
+}
+
+.sidebar .text {
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 65px;
+  text-align: center;
+  background: #1e1e1e;
+  letter-spacing: 1px;
+}
+
+nav ul {
+  background: #1b1b1b;
+  height: 100%;
+  width: 100%;
+  list-style: none;
+}
+
+nav ul li {
+  line-height: 60px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+nav ul li:last-child {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.05);
+}
+
+nav ul li a {
+  position: relative;
+  color: white;
+  text-decoration: none;
+  font-size: 18px;
+  padding-left: 40px;
+  font-weight: 500;
+  display: block;
+  width: 100%;
+  border-left: 3px solid transparent;
+}
+
+nav ul li.active a {
+  color: #880808;
+  background: #1e1e1e;
+  border-left-color: #880808;
+}
+
+nav ul li a:hover {
+  background: #1e1e1e;
+}
+
+nav ul ul {
+  position: static;
+  display: none;
+}
+
+nav ul .feat-show.show {
+  display: block;
+}
+
+nav ul .serv-show.show1 {
+  display: block;
+}
+
+nav ul ul li {
+  line-height: 42px;
+  border-top: none;
+}
+
+nav ul ul li a {
+  font-size: 17px;
+  color: #e6e6e6;
+  padding-left: 80px;
+}
+
+nav ul li.active ul li a {
+  color: #e6e6e6;
+  background: #1b1b1b;
+  border-left-color: transparent;
+}
+
+nav ul ul li a:hover {
+  color: #880808 !important;
+  background: #1e1e1e !important;
+}
+
+nav ul li a span {
+  position: absolute;
+  top: 50%;
+  right: 20px;
+  transform: translateY(-50%);
+  font-size: 22px;
+  transition: transform 0.4s;
+}
+
+nav ul li a span.rotate {
+  transform: translateY(-50%) rotate(-180deg);
+}
+
+.content {
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #202020;
+  z-index: -1;
+  text-align: center;
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  color: rgb(167, 167, 167);
+}
+
+/* Media query's*/
+@media (max-width: 768px) {
+  img {
+    max-width: 100%;
+  }
+}
+
+/* tablets */
+@media screen and (max-width: 1024px) {
+  .left-col a {
+    font-size: 18px;
+    padding: 8px;
+  }
+}
+
+/* mini tablets */
+@media screen and (max-width: 768px) {
+  .left-col a {
+    font-size: 16px;
+    padding: 8px;
+  }
+}
+
+/* phones */
+@media screen and (max-width: 480px) {
+  .left-col a {
+    font-size: 13px;
+    padding: 6px;
+    border-radius: 5px;
+  }
+}
+
+/* tablet */
+@media screen and (max-width: 1024px) {
+  .block li i {
+    margin-bottom: 25px;
+    font-size: 2em;
+  }
+}
+
+/* mini tablets */
+@media screen and (max-width: 768px) {
+  .block li i {
+    margin-bottom: 25px;
+    font-size: 1.7em;
+  }
+}
